--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node":"~18.17.0",
-    "npm":"~9.8.1"
-    },
+    "node": "~18.17.0",
+    "npm": "~9.8.1"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "mogodb": "^0.0.1-security",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
     "morgan": "~1.9.1"
-  }
+  },
+  "main": "app.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
